# kodlab_mjbots_sdk

./: .bash_history  .gitignore  .gitmodules  64BitOS.md  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  README.md  mkdocs.yml
.github/workflows/: doxygen-action.yml
cmake/: pi.cmake
cmake/sim/: AddMujocoAndDependencies.cmake  Findmujoco.cmake
docs/: Usage.md  docker.md  index.md  setup.md  usage.md
examples/: 13_motor_test.cpp  3DoFTest.cpp  CMakeLists.txt  attitude_example.cpp  behavior_robot_example 2.cpp  behavior_robot_example.cpp  dual_behavior.cpp  encoder_test.cpp  hello_world.cpp  imu_example 2.cpp  imu_example.cpp  jerboa.cpp  lcm_time_test.cpp  leg_2DoF_example.cpp  leg_3DoF_example.cpp  leg_example.cpp  moteus_control_example.cpp  moteus_control_example_with_logging.cpp  pd.cpp  pd_example.cpp  proprio_example 2.cpp  proprio_example.cpp  realtime_moteus.cpp  robot_example 2.cpp  robot_example.cpp  robot_moteus_example.cpp  spin_joints_example 2.cpp  spin_joints_example.cpp  spin_motor_example.cpp
include/examples/: quadruped_3dof_limb.h  simple_behavior.h  simple_control_io_behavior.h  simple_io_behavior.h  simple_limb.h  simple_robot.h  simple_spin_joints_behavior 2.h  simple_spin_joints_behavior.h
include/kodlab_mjbots_sdk/: AS5047P_Types.h  PID.h  abstract_lcm_subscriber.h  abstract_realtime_object.h  attitude.h  behavior.h  behavior_lcm_subscriber.h  behavior_manager 2.h  behavior_manager.h  cartesian_leg.h  common_header.h  controller_base.h  filter.h  imu_data 2.h  imu_data.h  interfaces.h  io_behavior.h  jointBase.h  jointMoteus.h  joint_base 2.h  joint_base.h  joint_moteus.h  lcm_message_handler.h  lcm_publisher.h  lcm_subscriber 2.h  lcm_subscriber.h  limb_base.cpp  limb_base.h  log.h  loop_cache.h  low_pass_filter.h  math.h  mjbots_behavior.h  mjbots_behavior_logging.h  mjbots_behavior_loop 2.h  mjbots_behavior_loop.h  mjbots_control_loop.h  mjbots_hardware_interface.h  mjbots_robot.h  mjbots_robot_interface.h  (+25 more)
include/kodlab_sdk/: pi3hat.h  pi3hat_moteus_interface.h
include/sim/: simulate.h
lcm_types/: VoidLcm.hpp  attitude_log.lcm  bulk_data.lcm  imu_log 2.lcm  leg_gains.lcm  leg_log 2.lcm  leg_log.lcm  many_motor_log.lcm  mode_input.lcm  motor_log.lcm  mujoco_data.lcm  pd_gains.lcm  tvh_gains.lcm  tvh_log.lcm  twist.lcm  void_lcm.hpp  void_lcm.lcm
model/: invertedPendulum.xml
python_scripts/: blit_manager.py  controller_input.py  jerboa_plotter.py  joystick_lcm.py  leg_gain_publisher.py  leg_plotter 2.py  leg_plotter.py  live_motor_plotter.py  many_motor_plotter.py  mode_input_cli.py  readEncoder.py  test_lcm.py  tvh_gain_publisher.py
python_scripts/joystick/: joystick_abstract.py  joystick_controller.py  joystick_logitech.py  joystick_xbox.py
robot_libs/jerboa_lib/include/jerboa_lib/: detect_mode_transition.h  physical_params.h  tvh.h
robot_libs/jerboa_lib/src/: CMakeLists.txt  detect_mode_transition.cpp  tvh.cpp
scripts/: build_all.sh  build_clean_all.sh  make_lcm 2.sh
src/: AS5047P_Types.cpp  CMakeLists.txt  PID.cpp  abstract_realtime_object.cpp  cartesian_leg 2.cpp  cartesian_leg.cpp  common_header.cpp  joint_base 2.cpp  joint_base.cpp  joint_moteus.cpp  lcm_subscriber.cpp  limb_base.cpp  loop_cache.cpp  low_pass_filter.cpp  mjbots_behavior.cpp  mjbots_hardware_interface 2.cpp  mjbots_hardware_interface.cpp  mjbots_robot.cpp  mjbots_robot_interface.cpp  mjbots_simulation_interface.cpp  pi3hat.cpp  polar_leg 2.cpp  polar_leg.cpp  realtime_robot.cpp  robot_base.cpp  robot_interface.cpp  soft_start 2.cpp  soft_start.cpp
src/sim/: glfw_dispatch.cpp  simulate.cpp  uitools.cpp
utils/: config_servos.py  setup-system 2.py  setup-system.py  setup-wifi.py
